Remove some compiler warnings